--- a/css/styles.css
+++ b/css/styles.css
@@ -236,13 +236,14 @@ span{
 .conclusions>div:hover>a{
     color: cadetblue;
 }
-.conclusions>div:hover{
-    background-color: rgb(50, 100, 50);
+
+.conclusions>div>a:hover {
+    text-decoration: underline;
 }
 .main>h1{
     font-style: normal;
     font-weight: 800;
-    font-size: 45px;
+    font-size: 50px;
     line-height: 55px;
     margin: 0 0 28px 0;
 }
@@ -264,7 +265,22 @@ span{
     top: -20px;
 }
 .home>img{
-
     width: 50px;
     height: 50px;
+}
+
+.scheme{
+    width: 160px;
+    background-color: chartreuse;
+    border-radius: 10px;
+    margin: auto;
+    padding: 4px 0 4px 0;
+    position: absolute;
+    top: 24px;
+    left: 10px;
+}
+.watch{
+    font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
 }
